syntax = "proto3";
option java_package = "ru.kv.protobuf";
option java_outer_classname = "KVRPC";

// see https://developers.google.com/protocol-buffers/docs/javatutorial

message GetRequest {
   int64 key = 1;
}

message GetResponse {
   bool found = 1;
   int64 key = 2;
  optional string value = 3;
}

message PutRequest {
   int64 key = 1;
   string value = 2;
}

message PutResponse {
   bool success = 1;
   int64 key = 2;
   string value = 3;
}

message RPCRequest {
   int64 sequenceNum = 1;
  oneof KVStoreServerRequest {
    GetRequest getRequest = 2;
    PutRequest putRequest = 3;
  }
}

message RPCResponse {
   int64 sequenceNum = 1;
  oneof KVStoreServerResponse {
    GetResponse getResponse = 2;
    PutResponse putResponse = 3;
  }
}